# ipc-bench

source/: CMakeLists.txt
source/common/: process.c
source/uintr-shm/: CMakeLists.txt  client.c  server.c  uintr-shm.c
source/uintrfd/: CMakeLists.txt  uintrfd-bi.c  uintrfd-sm-bi.c  uintrfd-uni.c
